# squareknot

./: BUGS.md  Cargo.toml  README.md  TODO.md  build.sh  data3.dimacs  gen.sh  test.dimacs
.github/workflows/: rust.yml
benches/: Cargo.toml
benches/benches/squareknot_traversal/: bfs.rs  dfs.rs  main.rs
benches/src/: lib.rs
crates/graph_constructors/: Cargo.toml
crates/squareknot_combinators/: Cargo.toml
crates/squareknot_combinators/src/: lib.rs  living.rs  vertex_filter.rs  vertex_map.rs
crates/squareknot_core/: Cargo.toml
crates/squareknot_core/src/: graph.rs  lib.rs  storage.rs  undirected.rs
crates/squareknot_core/src/storage/: adjacency_list.rs
crates/squareknot_embedding/: Cargo.toml
crates/squareknot_graph/: Cargo.toml
crates/squareknot_graph/src/: combinators.rs  fast.rs  graph.rs  lib.rs  storage.rs  undirected.rs
crates/squareknot_graph/src/combinators/: edge_filter.rs  edge_map.rs  graph_view.rs  line_graph.rs  vertex_compactor.rs  vertex_filter.rs  vertex_map.rs
crates/squareknot_graph/src/storage/: adjacency_list.rs  adjacency_matrix.rs
crates/squareknot_internal/: Cargo.toml
crates/squareknot_internal/src/: lib.rs  prelude.rs
crates/squareknot_io/: Cargo.toml
crates/squareknot_io/src/: dimacs.rs  lib.rs  pair_iter.rs
crates/squareknot_metadata/: Cargo.toml
crates/squareknot_metadata/src/: lib.rs
crates/squareknot_pathing/: Cargo.toml
crates/squareknot_pathing/src/: apsp.rs  lib.rs
crates/squareknot_planarity/: Cargo.toml
crates/squareknot_planarity/src/: lib.rs
crates/squareknot_traversal/: Cargo.toml
crates/squareknot_traversal/src/: bfs.rs  breadth_first.rs  depth_first.rs  dfs.rs  full_breadth_first.rs  full_depth_first.rs  lib.rs  recorded_breadth_first.rs  recycle.rs
examples/: aaron594hw4p3.rs  aaronhw4p1.rs  aaronhw4p3.rs  apsp1.rs  compcount.rs  demo.rs  gen.rs  kempe_chains.rs  test.rs  traversal.rs
integration_tests/: Cargo.toml
integration_tests/tests/: combinator_tests.rs  traversal_tests.rs
src/: algorithms.rs  auxilliary.rs  coloring.rs  embedding.rs  graph.rs  io.rs  lib.rs  pathing.rs  prelude.rs  traversal.rs  utils.rs
src/algorithms/pathing/: apsp.rs  shortest_path.rs
src/algorithms/traversal/: breadth_first.rs  depth_first.rs
src/auxilliary/: edge_weights.rs
src/graph/: storage.rs  undirected.rs
src/graph/storage/: adjacency_list.rs
src/io/: dimacs.rs  pair_iter.rs
src/pathing/: apsp.rs
src/traversal/: breadth_first.rs  depth_first.rs
src/utils/: union_find.rs
tests/: traversal_tests.rs
