[package]
name = "squareknot"
version = "0.1.0"
edition = "2021"

# [profile.release]
# opt-level = 3

[workspace]
members = [
    "crates/squareknot_core",
    "crates/squareknot_embedding",
    "crates/squareknot_io",
    "crates/squareknot_metadata",
    "crates/squareknot_pathing",
    "crates/squareknot_traversal",
    "crates/squareknot_internal",
]
exclude = ["integration_tests"]

[dependencies]
squareknot_internal = { path = "crates/squareknot_internal" }

[features]
default = ["io", "embedding", "traversal", "pathing", "metadata"]

io = ["squareknot_internal/io"]
embedding = ["squareknot_internal/embedding"]
traversal = ["squareknot_internal/traversal"]
pathing = ["squareknot_internal/pathing", "traversal"]
metadata = ["squareknot_internal/metadata"]
