[package]
name = "squareknot"
version = "0.1.0"
edition = "2021"

# [profile.release]
# opt-level = 3

[workspace]
members = [
    "crates/squareknot_graph",
    "crates/squareknot_planarity",
    "crates/squareknot_io",
    "crates/squareknot_metadata",
    "crates/squareknot_pathing",
    "crates/squareknot_traversal",
    "crates/squareknot_internal",
    "crates/squareknot_combinators",
    "benches",
]
exclude = ["integration_tests"]

[dependencies]
squareknot_internal = { path = "crates/squareknot_internal" }

[features]
default = ["io", "embedding", "traversal", "pathing", "metadata", "combinators", "planarity"]

io = ["squareknot_internal/io"]
embedding = ["squareknot_internal/planarity"]
traversal = ["squareknot_internal/traversal"]
pathing = ["squareknot_internal/pathing", "traversal"]
metadata = ["squareknot_internal/metadata"]
combinators = ["squareknot_internal/combinators"]
planarity = ["squareknot_internal/planarity"]