[package]
name = "squareknot_internal"
version = "0.1.0"
edition = "2024"

[features]
io = ["dep:squareknot_io"]
planarity = ["dep:squareknot_planarity"]
traversal = ["dep:squareknot_traversal"]
pathing = ["dep:squareknot_pathing", "traversal"]
metadata = ["dep:squareknot_metadata"]

[dependencies]
squareknot_graph = { path = "../squareknot_graph" }
squareknot_planarity = { path = "../squareknot_planarity", optional = true }
squareknot_io = { path = "../squareknot_io", optional = true }
squareknot_metadata = { path = "../squareknot_metadata", optional = true }
squareknot_pathing = { path = "../squareknot_pathing", optional = true }
squareknot_traversal = { path = "../squareknot_traversal", optional = true }
